--- a/praktikum-02/CV.html
+++ b/praktikum-02/CV.html
@@ -17,9 +17,9 @@
     </p>
     <ol>
     <h2>Biodata</h2>
-    <li>A</li>
-    <li>Alamat: SASAK PANJANG</li>
-    <li>Alamat: SASAK PANJANG</li>
+    <li>Alamat: Sasak Panjang</li>
+    <li>email : hudda.kas@gmail.com</li>
+    <li>no Hp: 08561447925</li>
     </ol> 
     <ol>
     <h2>Pendidikan</h2>
